# xiso-ex

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  entry.rs  ftp.rs  lib.rs  main.rs  meta.rs
