[package]
name = "xiso-ex"
version = "0.1.0"
author = "Gamadril"
about = "Extracts content of Xbox360 ISO files"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pbr = "1.1.1"
suppaftp = "^5.2.0"
url-parse = "1.0.7"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

